# sodaya-api-hexagonal/src/Catalog/Categories/Infrastructure/Http/routes.php
@@ -6,6 +6,7 @@ use Illuminate\Support\Facades\Route;
 use Src\Catalog\Categories\Infrastructure\Http\Controllers\CategoryController;
 
 Route::prefix('cocina/categorias')
+    ->middleware('auth:sanctum')
     ->name('catalog.categories.')
     ->controller(CategoryController::class)
     ->group(function (): void {
