# sodaya-api-hexagonal/src/Sodas/Closures/Infrastructure/Http/routes.php
@@ -6,6 +6,7 @@ use Illuminate\Support\Facades\Route;
 use Src\Sodas\Closures\Infrastructure\Http\Controllers\ClosureController;
 
 Route::prefix('cocina/cierres')
+    ->middleware('auth:sanctum')
     ->name('sodas.closures.')
     ->controller(ClosureController::class)
     ->group(function (): void {
